# LyraWave

./: CMakeLists.txt  LyraWave.qmlproject  qmlmodules
AudioLib/: AmplitudeReader.cpp  AmplitudeReader.h  Amplitudes.cpp  Amplitudes.h  CMakeLists.txt  MoveAvg.hpp  amplitudereader.cpp  amplitudereader.h
AudioLib/rsc/: sample.qrc
content/: AmpGraph.qml  App.qml  AudioManage.qml  CMakeLists.txt  Screen01.ui.qml
imports/: CMakeLists.txt
imports/LyraWave/: CMakeLists.txt  qmldir
imports/LyraWave/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
